// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File mapping arrow functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "1",
        "2",
      ],
      "end": 152,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 142,
    },
    Object {
      "args": Array [
        "1",
        "2",
      ],
      "end": 163,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 153,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 67,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 22,
    },
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 142,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 68,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping arrow functions with more complex statements 1`] = `
Object {
  "functionCalls": Array [],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 45,
      "filename": "src/dir/a.js",
      "name": "maga",
      "pos": 7,
    },
    Object {
      "args": Array [
        "a",
        "b",
      ],
      "end": 121,
      "filename": "src/dir/a.js",
      "name": "yaga",
      "pos": 49,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping class functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "42",
      ],
      "end": 149,
      "filename": "src/dir/a.js",
      "name": "propFunc",
      "pos": 133,
    },
    Object {
      "args": Array [
        "12",
      ],
      "end": 168,
      "filename": "src/dir/a.js",
      "name": "methodFunc",
      "pos": 150,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 73,
      "filename": "src/dir/a.js",
      "name": "propFunc",
      "pos": 53,
    },
    Object {
      "args": Array [
        "a",
      ],
      "end": 110,
      "filename": "src/dir/a.js",
      "name": "methodFunc",
      "pos": 77,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping jsx 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "CLICK",
      ],
      "end": 136,
      "filename": "src/dir/a.tsx",
      "name": "alert",
      "pos": 117,
    },
    Object {
      "args": Array [
        "EXPR:undefined...",
      ],
      "end": 370,
      "filename": "src/dir/a.tsx",
      "name": "map",
      "pos": 194,
    },
    Object {
      "args": Array [],
      "end": 288,
      "filename": "src/dir/a.tsx",
      "name": "toLocaleTimeString",
      "pos": 265,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        undefined,
      ],
      "end": 390,
      "filename": "src/dir/a.tsx",
      "name": "History",
      "pos": 28,
    },
    Object {
      "args": Array [],
      "end": 141,
      "filename": "src/dir/a.tsx",
      "name": "onClick",
      "pos": 94,
    },
  ],
  "includes": Array [],
}
`;

exports[`File mapping regular functions 1`] = `
Object {
  "functionCalls": Array [
    Object {
      "args": Array [
        "42",
      ],
      "end": 68,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 58,
    },
    Object {
      "args": Array [
        "12",
      ],
      "end": 92,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 83,
    },
    Object {
      "args": Array [
        "EXPR:gaga...",
      ],
      "end": 109,
      "filename": "src/dir/a.js",
      "name": "FEFE",
      "pos": 94,
    },
    Object {
      "args": Array [
        "33",
      ],
      "end": 108,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 100,
    },
  ],
  "functionDeclarations": Array [
    Object {
      "args": Array [
        "a",
      ],
      "end": 58,
      "filename": "src/dir/a.js",
      "name": "gaga",
      "pos": 22,
    },
  ],
  "includes": Array [],
}
`;
